pinning the point tooltip on click

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Apr 15 2020 10:14:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 17 2020 08:29:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e86e77d9942c1cbf280204e" data-wf-site="5e86e77d9942c1364f80204b">
 <head>
   <meta charset="utf-8">
@@ -3272,7 +3272,7 @@
               <div>MUNICIPALITY</div>
             </div>
             <div class="map__tooltip_name">
-              <div class="text-block">Elim</div>
+              <div>Elim</div>
             </div>
             <div class="map__tooltip_value">
               <div class="tooltip__value_label">
@@ -3332,8 +3332,8 @@
 </svg></div>
                 </div>
               </div>
-              <div class="map__tooltip-tooltip_name">
-                <div class="truncate">Elim High School</div>
+              <div class="map__facility-tooltip_name">
+                <div>Elim High School</div>
               </div>
             </div>
             <div class="map__facility-tooltip_items">
