--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue May 19 2020 07:05:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed May 20 2020 09:47:43 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5eb3f86b73bbb2dc035b8126" data-wf-site="5eb15896d338d282555182fd">
 <head>
   <meta charset="utf-8">
@@ -1633,23 +1633,28 @@ input:checked + .slider:before {
           <div>Rich data section title</div>
         </div>
         <div class="styles__area_block horizontal wide">
-          <div class="section-header">
-            <div class="section-header__title">
-              <div class="section-header__icon">
-                <div class="svg-icon large w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+          <div class="category-header">
+            <div class="category-header__content">
+              <div class="category-header__title">
+                <div class="category-header__icon">
+                  <div class="svg-icon large w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
 </svg></div>
+                </div>
+                <div class="category-header__text">
+                  <h2 class="cc-clear">Category Title</h2>
+                </div>
               </div>
-              <div class="section-header__text">
-                <h2 class="cc-clear">Section Title</h2>
-              </div>
-            </div>
-            <div class="section-header__link">
-              <div class="link-block">
-                <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+              <div class="category-header__link">
+                <div class="link-block">
+                  <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M6.188 8.719c.439-.439.926-.801 1.444-1.087 2.887-1.591 6.589-.745 8.445 2.069l-2.246 2.245c-.644-1.469-2.243-2.305-3.834-1.949-.599.134-1.168.433-1.633.898l-4.304 4.306c-1.307 1.307-1.307 3.433 0 4.74 1.307 1.307 3.433 1.307 4.74 0l1.327-1.327c1.207.479 2.501.67 3.779.575l-2.929 2.929c-2.511 2.511-6.582 2.511-9.093 0s-2.511-6.582 0-9.093l4.304-4.306zm6.836-6.836l-2.929 2.929c1.277-.096 2.572.096 3.779.574l1.326-1.326c1.307-1.307 3.433-1.307 4.74 0 1.307 1.307 1.307 3.433 0 4.74l-4.305 4.305c-1.311 1.311-3.44 1.3-4.74 0-.303-.303-.564-.68-.727-1.051l-2.246 2.245c.236.358.481.667.796.982.812.812 1.846 1.417 3.036 1.704 1.542.371 3.194.166 4.613-.617.518-.286 1.005-.648 1.444-1.087l4.304-4.305c2.512-2.511 2.512-6.582.001-9.093-2.511-2.51-6.581-2.51-9.092 0z"></path>
 </svg></div>
+                </div>
               </div>
+            </div>
+            <div class="category-header__description">
+              <p>Category description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
           </div>
         </div>
@@ -1657,30 +1662,71 @@ input:checked + .slider:before {
           <div>Rich data indicator header</div>
         </div>
         <div class="styles__area_block horizontal wide">
-          <div class="indicator-header">
-            <div class="indicator-header__title">
+          <div class="sub-category-header first">
+            <div class="sub-category-header__title">
               <div class="indicator__title_wrapper">
                 <h3 class="cc-clear">Indicator title</h3>
                 <div class="h3__line-v"></div>
               </div>
             </div>
-            <div class="indicator-header__description">
+            <div class="sub-category-header__description">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
             </div>
-            <div class="indicator-header__key-metrics">
-              <div class="indicator__key-metrics_title">
+            <div class="sub-category-header__key-metrics">
+              <div class="sub-category-header__key-metrics_title">
                 <div>KEY METRICS for this indicator</div>
               </div>
-              <div class="key-metric">
-                <div class="key-metric__card">
-                  <div class="key-metric_value">
-                    <div>00</div>
+              <div class="sub-category-header__key-metrics_wrap">
+                <div class="key-metric">
+                  <div class="key-metric__card">
+                    <div class="key-metric__value">
+                      <div>00</div>
+                    </div>
+                    <div class="key-metric__title">
+                      <div>Metric title</div>
+                    </div>
+                    <div class="key-metric__description">
+                      <div>Description text that describes this metric in relation to surrounding locations</div>
+                    </div>
                   </div>
-                  <div class="key-metric_title">
-                    <div>Metric title</div>
+                </div>
+                <div class="key-metric">
+                  <div class="key-metric__card">
+                    <div class="key-metric__value">
+                      <div>00</div>
+                    </div>
+                    <div class="key-metric__title">
+                      <div>Metric title</div>
+                    </div>
+                    <div class="key-metric__description">
+                      <div>Description text that describes this metric in relation to surrounding locations</div>
+                    </div>
                   </div>
-                  <div class="key-metric_description">
-                    <div>Description text that describes this metric in relation to surrounding locations</div>
+                </div>
+                <div class="key-metric">
+                  <div class="key-metric__card">
+                    <div class="key-metric__value">
+                      <div>00</div>
+                    </div>
+                    <div class="key-metric__title">
+                      <div>Metric title</div>
+                    </div>
+                    <div class="key-metric__description">
+                      <div>Description text that describes this metric in relation to surrounding locations</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="key-metric">
+                  <div class="key-metric__card">
+                    <div class="key-metric__value">
+                      <div>00</div>
+                    </div>
+                    <div class="key-metric__title">
+                      <div>Metric title</div>
+                    </div>
+                    <div class="key-metric__description">
+                      <div>Description text that describes this metric in relation to surrounding locations</div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1691,12 +1737,12 @@ input:checked + .slider:before {
           <div>Rich data sub-indicator</div>
         </div>
         <div class="styles__area_block horizontal wide">
-          <div class="sub-indicator last">
-            <div class="sub-indicator__header">
-              <div class="sub-indicator__title">
+          <div class="profile-indicator last">
+            <div class="profile-indicator__header">
+              <div class="profile-indicator__title">
                 <h4>Indicator chart title</h4>
               </div>
-              <div class="sub-indicator__options">
+              <div class="profile-indicator__options">
                 <div class="hover-menu">
                   <div class="hover-menu__icon">
                     <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
@@ -1760,7 +1806,7 @@ input:checked + .slider:before {
                 </div>
               </div>
             </div>
-            <div class="sub-indicator__filters">
+            <div class="profile-indicator__filters">
               <div class="filter__dropdown_wrap">
                 <div class="dropdown-menu__label">
                   <div>Select a value:</div>
@@ -1815,8 +1861,8 @@ input:checked + .slider:before {
                 </div>
               </div>
             </div>
-            <div class="sub-indicator__chart">
-              <div class="sub-indicator__chart_body">
+            <div class="profile-indicator__chart">
+              <div class="profile-indicator__chart_body">
                 <div class="indicator__chart full">
                   <div class="bar-chart">
                     <div class="bar-chart__main">
@@ -1932,11 +1978,11 @@ input:checked + .slider:before {
                   </div>
                 </div>
               </div>
-              <div class="sub-indicator__chart_footer">
-                <div class="sub-indicator__chart_footnote">
+              <div class="profile-indicator__chart_footer">
+                <div class="profile-indicator__chart_description">
                   <p>Sub-indicator chart footnote goes here and helps to describe the data presented</p>
                 </div>
-                <div class="sub-indicator__chart_source">
+                <div class="profile-indicator__chart_source">
                   <div class="chart__footer_label">
                     <div>Source:</div>
                   </div>
