using arrow keys and enter key on search input

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jun 04 2020 10:12:28 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 12 2020 11:31:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -1941,14 +1941,27 @@ line, .grid {
           <div>Search dropdown list items</div>
         </div>
         <div class="styles__area_block horizontal wide">
-          <div data-w-id="ca04ae0c-a42d-2ae0-cca0-908692429652" class="search__dropdown_list-item">
+          <div data-w-id="0cc195d0-8237-0a5c-88c5-6bd36b98a8c1" class="search__dropdown_list-item">
             <div class="search__list-item_location-name">
               <div class="truncate">Location name</div>
             </div>
             <div class="search__list-item_location-parent">
               <div class="truncate">Parent </div>
             </div>
-            <div id="w-node-908692429659-e148319d" class="search__list-item_location-type">
+            <div id="w-node-6bd36b98a8c8-e148319d" class="search__list-item_location-type">
+              <div class="truncate">Location Type</div>
+            </div>
+          </div>
+        </div>
+        <div class="styles__area_block horizontal wide">
+          <div data-w-id="8d9eb87a-805a-ef6a-0ef3-bca9e2f0f208" class="search__dropdown_list-item active">
+            <div class="search__list-item_location-name">
+              <div class="truncate">Location name</div>
+            </div>
+            <div class="search__list-item_location-parent">
+              <div class="truncate">Parent </div>
+            </div>
+            <div id="w-node-bca9e2f0f20f-e148319d" class="search__list-item_location-type">
               <div class="truncate">Location Type</div>
             </div>
           </div>
