--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jul 10 2020 07:20:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 14 2020 06:06:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -19,10 +19,8 @@
           rel="stylesheet">
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-93649482-25"></script>
-    <script>
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-93649482-25"></script>
+  <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() {
             dataLayer.push(arguments);
@@ -35,104 +33,6 @@
         });
         window.gtag = gtag;
     </script>
-  <style>
-/*------------------------------------- Truncation */
-.truncate {
-	width: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	}
-/*------------------------------------- Hidden important */
-.hidden {
-	display: none !important;
-  }
-/*------------------------------------- Hide webflow items on deploy */
-.disabled {
-  pointer-events: none;
-}  
-/*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
-.no-scroll::-webkit-scrollbar {
-  display: none;
-}
-/*------------------------------------- Hide scrollbar for IE and Edge */
-.no-scroll {
-  -ms-overflow-style: none;
-}
-/*-------- Narrow scroll bar */
-/*width*/
-.narrow-scroll::-webkit-scrollbar {
-  width:4px;
-}
-/*track*/
-.narrow-scroll::-webkit-scrollbar-track {
-  background:rgba(255, 255, 255, 0);
-  border-color:rgb(255, 255, 255);
-}
-/*thumb*/
-.narrow-scroll::-webkit-scrollbar-thumb {
-  background:rgb(98, 98, 98);
-  border-color:rgb(51, 51, 51);
-  border-radius:2px;
-}
-/*-------- Custom slider checkbox */  
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 32px;
-  height: 20px;
-}
-.switch input { 
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #00000030;
-  -webkit-transition: .1s;
-  transition: .1s;
-}
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 12px;
-  width: 12px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .1s;
-  transition: .1s;
-}
-input:checked + .slider {
-  background-color: #3c3c3c;
-}
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(12px);
-  transform: translateX(12px);
-}
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-.slider.round:before {
-  border-radius: 50%;
-}
-/*-------- Fixing Chart Lines */  
-.bar-tooltip {
-  z-index: 100;
-}
-line, .grid {
-  stroke: #999;
-  stroke-opacity: 0.2;
-}
-</style>
 </head>
 <body class="body no-scroll">
   <div class="login-modal hidden">
@@ -2543,5 +2443,102 @@ setTimeout(function(){
   .leaflet-control-attribution {
     display: none !important;
     }
+/*------------------------------------- Truncation */
+.truncate {
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	}
+/*------------------------------------- Hidden important */
+.hidden {
+	display: none !important;
+  }
+/*------------------------------------- Hide webflow items on deploy */
+.disabled {
+  pointer-events: none;
+}  
+/*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
+.no-scroll::-webkit-scrollbar {
+  display: none;
+}
+/*------------------------------------- Hide scrollbar for IE and Edge */
+.no-scroll {
+  -ms-overflow-style: none;
+}
+/*-------- Narrow scroll bar */
+/*width*/
+.narrow-scroll::-webkit-scrollbar {
+  width:4px;
+}
+/*track*/
+.narrow-scroll::-webkit-scrollbar-track {
+  background:rgba(255, 255, 255, 0);
+  border-color:rgb(255, 255, 255);
+}
+/*thumb*/
+.narrow-scroll::-webkit-scrollbar-thumb {
+  background:rgb(98, 98, 98);
+  border-color:rgb(51, 51, 51);
+  border-radius:2px;
+}
+/*-------- Custom slider checkbox */  
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 32px;
+  height: 20px;
+}
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #00000030;
+  -webkit-transition: .1s;
+  transition: .1s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 12px;
+  width: 12px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .1s;
+  transition: .1s;
+}
+input:checked + .slider {
+  background-color: #3c3c3c;
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(12px);
+  transform: translateX(12px);
+}
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+.slider.round:before {
+  border-radius: 50%;
+}
+/*-------- Fixing Chart Lines */  
+.bar-tooltip {
+  z-index: 100;
+}
+line, .grid {
+  stroke: #999;
+  stroke-opacity: 0.2;
+}
 </style>
+</body>
 </html>
