added loading state for the location name

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jul 14 2020 06:06:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 14 2020 12:06:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -438,7 +438,10 @@
         <div class="rich-data__shadow"></div>
         <div style="-webkit-transform:translate3d(0, -72PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -72PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -72PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -72PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="sticky-header">
           <div title="Click to make this your primary search" class="sticky-header__current-location">
-            <div class="truncate text-center">Location name</div>
+            <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+            <div class="loading__text">
+              <div>Loading... </div>
+            </div>
           </div>
           <div class="sticky-header__tutorial hidden">
             <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewbox="0 0 24 24" width="24">
@@ -454,7 +457,10 @@
                 <div>Navigate to:</div>
               </div>
               <div class="breadcrumb">
-                <div class="truncate">Parent geography</div>
+                <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+                <div class="loading__text">
+                  <div>Loading... </div>
+                </div>
               </div>
             </div>
             <div class="location__tutorial hidden">
@@ -467,7 +473,12 @@
             </div>
           </div>
           <div data-w-id="a462ef20-a798-735c-f166-106a34080855" class="location__title">
-            <h1 class="cc-clear">Location name</h1>
+            <div class="loading">
+              <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+              <div class="loading__text">
+                <div>Loading... </div>
+              </div>
+            </div>
           </div>
           <div class="location__description hidden">
             <div>A <span class="location-type">Location type</span> in <span class="parent-geography">parent geography</span></div>
