--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jul 20 2020 06:33:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 28 2020 10:37:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -15,9 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:300,regular,italic,500,500italic,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
-    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-93649482-25"></script>
   <script>
@@ -296,7 +294,7 @@
             <div class="location-tag__name">
               <div class="truncate text-center">Loading...</div>
             </div>
-            <div class="location-tag__loading-icon"><img src="images/loading.gif" alt=""></div>
+            <div class="location-tag__loading-icon"><img src="images/loading.gif" width="10" alt=""></div>
           </div>
         </div>
         <div class="map-location__info"></div>
@@ -440,7 +438,7 @@
           <div title="Click to make this your primary search" class="sticky-header__current-location">
             <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
             <div class="loading__text">
-              <div>Loading... </div>
+              <div class="truncate">Loading... </div>
             </div>
           </div>
           <div class="sticky-header__tutorial hidden">
@@ -2487,6 +2485,8 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
   <link rel="stylesheet" href="https://openup.org.za/wazimap-ng-ui/wazimap-ng.css">
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+  <!--  Material design icons  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--  used the the autocomplete search box  -->
   <script crossorigin="anonymous" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
   <script src="https://bevacqua.github.io/dragula/dist/dragula.js"></script>
