hiding facility and source titles on rich data panel if there is no data

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jul 28 2020 10:37:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Aug 13 2020 09:55:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -244,7 +244,7 @@
         </div>
         <div id="w-node-926b3e9c85a0-e148319d" class="nav__content_menu">
           <div class="nav__link-wrap">
-            <a data-w-id="2331a044-806f-907c-13ce-926b3e9c8565" href="#" class="nav__link w-inline-block">
+            <a data-w-id="2331a044-806f-907c-13ce-926b3e9c8565" href="#" class="nav__link tutorial__open w-inline-block">
               <div class="nav__link_icon">
                 <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewbox="0 0 24 24" width="24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"></path>
