--- a/src/demo.html
+++ b/src/demo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jul 20 2020 06:33:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Aug 21 2020 10:32:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f5a354831a0" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -642,7 +642,7 @@ input:checked + .slider:before {
           <div class="location__description">
             <div>A <span class="location-type">Location type</span> in <span class="parent-geography">parent geography</span></div>
           </div>
-          <div class="location__sources">
+          <div class="location__facilities_sources">
             <div class="label">
               <div>Sources used:</div>
             </div>
@@ -4243,7 +4243,66 @@ input:checked + .slider:before {
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ecb7ed6bb713f2f4b48319b" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <div class="print-styling w-embed">
+    <style>
+@media print {
+/*--padding adjustments--*/
+	.location__description, .location__sources .profile-indicator {
+  	padding-bottom: 0px;
+  }
+  .section {
+  	padding-bottom: 20px;
+  }
+  .sub-category-header__key-metrics {
+  	padding-bottom: 12px;
+  }
+  .profile-indicator__header {
+  	margin-bottom: 0px;
+  }
+	.sub-category-header__title {
+  	margin-bottom: 12px;
+  }
+  .profile-indicator__chart {
+  	margin-top: 0px;
+  }
+/*--hide unwanted elements in print--*/
+  .nav, .login-modal, .category-header__link, .location__header, .profile-indicator__options, .sticky-header, .tutorial-modal, .styles, .map, .point-mapper, .data-mapper, .panel-toggles, .rich-data-nav, .rich-data-bumper, .rich-data-toggles {
+    display: none;
+  }
+/*--avoid page breaks--*/
+	.sub-category-header {
+ 		break-inside: avoid;
+	}
+	.profile-indicator {
+  	break-inside: avoid;
+  }
+/*--hide interaction buttons--*/
+.location-facility__list_item {
+	grid-template-columns: 4fr 1fr .0;
+  }
+.location-facility__item_download {
+	display: none;
+  }
+/*--adjust rich-data panel to fill page--*/
+	.rich-data, .rich-data-content {
+  	max-width: 100%;
+    width: 100%;
+	}
+  .rich-data-content {
+  	padding: 0px;
+    filter: grayscale(100%);
+  }
+/*--adjust text size--*/
+  .body {
+ 	 font-size: 12px !important;
+  }
+/*--adjust charts--*/
+.bar-chart__row_bar {
+	background-color: #000 !important;
+  }
+</style>
+  </div>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ecb7ed6bb713f2f4b48319b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Used for the autocomplete search box  -->
