allowing decimal point configuration at profile level

--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Aug 25 2020 09:00:34 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Sep 04 2020 06:59:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecf610e0e918eeee29e9d23" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -32,6 +32,7 @@
         });
         window.gtag = gtag;
     </script>
+  <script src="https://kit.fontawesome.com/95e41092af.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="nav narrow">
