--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
         <div class="tutorial__title">
           <h1 class="clear">How to use <span class="profile-name">Profile Name</span></h1>
         </div>
-        <div data-w-id="6ca2d157-b860-d2c0-78da-11837bc90d1d" class="tutorial__close">
+        <div data-w-id="6ca2d157-b860-d2c0-78da-11837bc90d1d" data-testid="tutorial-close" class="tutorial__close">
           <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
 </svg></div>
