added confirmation modal

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Sep 04 2020 06:59:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 22 2020 11:38:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -68,7 +68,7 @@
         <div class="tutorial__title">
           <h1 class="clear">How to use <span class="profile-name">Profile Name</span></h1>
         </div>
-        <div data-w-id="6ca2d157-b860-d2c0-78da-11837bc90d1d" class="tutorial__close">
+        <div data-w-id="6ca2d157-b860-d2c0-78da-11837bc90d1d" data-testid="tutorial-close" class="tutorial__close">
           <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
 </svg></div>
@@ -190,7 +190,7 @@
       </div>
     </div>
   </div>
-  <div class="warning-modal">
+  <div class="warning-modal hidden">
     <div class="warning">
       <div class="warning__header">
         <div class="warning-title">
@@ -210,7 +210,7 @@
           </div>
           <div class="checkbox-label">Don&#x27;t show again</div>
         </div>
-        <div id="w-node-0df91218fa61-e148319d" class="button-wrapper"><a data-w-id="d59f773f-aa49-25bd-47c6-0df91218fa62" href="#" class="button button--margin-right button--grey w-button">Cancel</a><a data-w-id="d59f773f-aa49-25bd-47c6-0df91218fa64" href="#" class="button button--margin-right w-button">Proceed</a></div>
+        <div id="w-node-0df91218fa61-e148319d" class="button-wrapper"><a href="#" class="button button--margin-right button--grey w-button">Cancel</a><a id="warning-proceed" href="#" class="button button--margin-right w-button">Proceed</a></div>
       </div>
     </div>
   </div>
