--- a/src/styles.html
+++ b/src/styles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Aug 21 2020 10:32:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 22 2020 11:38:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713ff81b48319f" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -32,6 +32,7 @@
         });
         window.gtag = gtag;
     </script>
+  <script src="https://kit.fontawesome.com/95e41092af.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="styles">
