--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Sep 22 2020 11:38:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Oct 01 2020 07:27:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -837,17 +837,6 @@
         <div class="styles__subsection">
           <div>Data sources</div>
         </div>
-        <div class="styles__area_block horizontal wide">
-          <div class="data-source">
-            <div>Date source name</div>
-          </div>
-          <div class="data-source">
-            <div>Date source name</div>
-          </div>
-          <div class="data-source">
-            <div>Date source name</div>
-          </div>
-        </div>
         <div class="styles__title">
           <div>Point Mapper</div>
         </div>
@@ -857,6 +846,79 @@
         <div class="styles__area_block">
           <div class="point-mapper__h1">
             <div data-w-id="b56538ca-5ff8-7ab0-c1ee-3096ddd391bd" class="point-mapper__h1_trigger">
+              <div class="point-data__h1_icon">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
+</svg></div>
+              </div>
+              <div class="point-data__h1_name">
+                <div class="truncate">Category Name</div>
+              </div>
+              <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0)" class="point-mapper__h1_trigger-arrow">
+                <div class="fas fa-angle-up"></div>
+              </div>
+            </div>
+            <div style="display:block" class="point-mapper__h1_content">
+              <div class="point-mapper__h2_wrapper">
+                <div class="point-mapper__h2 theme-1">
+                  <div class="point-mapper__h2_line-h"></div>
+                  <div class="point-mapper__h2_label">
+                    <div class="point-mapper__h2_name">
+                      <div class="truncate">Point data name</div>
+                    </div>
+                    <div class="point-mapper__h2_source">
+                      <div title="test test" class="truncate">Point data source name</div>
+                    </div>
+                  </div>
+                  <div class="point-mapper__h2_loading hidden"><img src="images/loading.gif" alt=""></div>
+                  <div class="point-mapper__h2_load-complete hidden">
+                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+</svg></div>
+                  </div>
+                </div>
+                <div class="point-mapper__h2">
+                  <div class="point-mapper__h2_line-h"></div>
+                  <div class="point-mapper__h2_label">
+                    <div class="point-mapper__h2_name">
+                      <div class="truncate">Point data name</div>
+                    </div>
+                    <div class="point-mapper__h2_source">
+                      <div title="test test" class="truncate">Point data source name</div>
+                    </div>
+                  </div>
+                  <div class="point-mapper__h2_loading hidden"><img src="images/loading.gif" alt=""></div>
+                  <div class="point-mapper__h2_load-complete">
+                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+</svg></div>
+                  </div>
+                </div>
+                <div class="point-mapper__h2 last theme-1">
+                  <div class="point-mapper__h2_line-h"></div>
+                  <div class="point-mapper__h2_label">
+                    <div class="point-mapper__h2_name">
+                      <div class="truncate">Point data name</div>
+                    </div>
+                    <div class="point-mapper__h2_source">
+                      <div class="truncate">Point data source name</div>
+                    </div>
+                  </div>
+                  <div class="point-mapper__h2_loading"><img src="images/loading.gif" alt=""></div>
+                  <div class="point-mapper__h2_load-complete hidden">
+                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+</svg></div>
+                  </div>
+                </div>
+              </div>
+              <div class="point-data__h2_line-v"></div>
+            </div>
+          </div>
+        </div>
+        <div class="styles__area_block">
+          <div class="point-mapper__h1">
+            <div data-w-id="e0cdcac6-d5b6-2780-3500-919c8eb3a735" class="point-mapper__h1_trigger">
               <div class="point-data__h1_icon">
                 <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
