chore: change tutorial title to "this interface"
instead of having the tutorial title read like "How to use GCRO" we
changed it to How to use this itnerface
therefore we don't need the profile loader events for it

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
     <div class="tutorial">
       <div class="tutorial__header">
         <div class="tutorial__title">
-          <h1 class="clear">How to use <span class="profile-name">Profile Name</span></h1>
+          <h1 class="clear">How to use <span class="profile-name">this interface</span></h1>
         </div>
         <div data-w-id="6ca2d157-b860-d2c0-78da-11837bc90d1d" data-testid="tutorial-close" class="tutorial__close">
           <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
