--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 01 2020 07:27:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Wed Oct 28 2020 09:21:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecf610e0e918eeee29e9d23" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -57,8 +56,9 @@
           </div>
           <div class="nav__search_button">
             <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-</svg></div>
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path fill="currentColor" d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+              </svg></div>
           </div>
         </div>
         <div style="display:none;opacity:0" class="nav__search_dropdown">
@@ -73,8 +73,9 @@
                     <div class="no-data">
                       <div class="no-data__icon">
                         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M20 5H4c-1.1 0-1.99.9-1.99 2L2 17c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm-9 3h2v2h-2V8zm0 3h2v2h-2v-2zM8 8h2v2H8V8zm0 3h2v2H8v-2zm-1 2H5v-2h2v2zm0-3H5V8h2v2zm9 7H8v-2h8v2zm0-4h-2v-2h2v2zm0-3h-2V8h2v2zm3 3h-2v-2h2v2zm0-3h-2V8h2v2z"></path>
-</svg></div>
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path fill="currentColor" d="M20 5H4c-1.1 0-1.99.9-1.99 2L2 17c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm-9 3h2v2h-2V8zm0 3h2v2h-2v-2zM8 8h2v2H8V8zm0 3h2v2H8v-2zm-1 2H5v-2h2v2zm0-3H5V8h2v2zm9 7H8v-2h8v2zm0-4h-2v-2h2v2zm0-3h-2V8h2v2zm3 3h-2v-2h2v2zm0-3h-2V8h2v2z"></path>
+                          </svg></div>
                       </div>
                       <div class="no-data__text">
                         <div>Start typing to begin...</div>
@@ -90,8 +91,8 @@
       <div id="w-node-7590f031f5e4-e29e9d23" class="nav__content_menu">
         <div class="nav__menu-trigger hidden">
           <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-<path fill="currentColor" d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
-</svg></div>
+              <path fill="currentColor" d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+            </svg></div>
         </div>
       </div>
     </div>
@@ -113,11 +114,14 @@
               </div>
               <div class="page-header__website-link_icon">
                 <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewbox="0 0 24 24" width="24">
-<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path>
-</svg></div>
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path fill="currentColor" d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path>
+                  </svg></div>
               </div>
             </a>
-          </div><a id="w-node-bcacce32cf46-e29e9d23" href="#" class="button w-button">View our map</a></div>
+          </div>
+          <a id="w-node-bcacce32cf46-e29e9d23" href="#" class="button w-button">View our map</a>
+        </div>
       </div>
     </div>
     <div class="content-block">
@@ -158,7 +162,10 @@
             </a>
           </div>
           <div id="w-node-d2e40839bd81-e29e9d23" class="footer__disclaimer">
-            <div id="w-node-4f0e27157bd9-e29e9d23"><span class="footer__profile-name">Wazi-NG (this is a temporary name) is an opensource project based on the excellent </span><a href="https://censusreporter.org/" target="_blank"><span class="footer__profile-name">Census Reporter</span></a><span class="footer__profile-name"> and </span><a href="http://www.wazimap.co.za" target="_blank"><span class="footer__profile-name">Wazimap</span></a><span class="footer__profile-name">.</span></div>
+            <div id="w-node-4f0e27157bd9-e29e9d23"><span class="footer__profile-name">Wazi-NG (this is a temporary name) is an opensource project based on the excellent </span>
+              <a href="https://censusreporter.org/" target="_blank"><span class="footer__profile-name">Census Reporter</span></a><span class="footer__profile-name"> and </span>
+              <a href="http://www.wazimap.co.za" target="_blank"><span class="footer__profile-name">Wazimap</span></a><span class="footer__profile-name">.</span>
+            </div>
           </div>
         </div>
       </div>
