chore: add newest changes

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Dec 07 2020 08:57:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 08 2020 09:13:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -3010,6 +3010,20 @@
    font-size: 30px;
    font-weight: bold;
    color: white;
+ }
+  #map-download-legend {
+   position: absolute;
+   bottom: 50px;
+   z-index: 998;
+   width: 100%;
+   display: flex;
+   justify-content: center;
+ }
+  #map-download-legend .map-options__legend_wrap {
+   background: white;
+   padding: 5px;
+   height: 29px;
+   max-width: 397px;
  }
 </style> <!--  Used for the autocomplete search box  -->
   <link href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
