applied design changes

--- a/src/index.html
+++ b/src/index.html
@@ -312,6 +312,7 @@
       </div>
     </div>
     <div class="map">
+	  <div class="map-title">Loading...</div>
       <div class="map-about hidden">
         <div class="map-about__icon">
           <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
