feat: increase surface area for clicking points
using a nice plugin we can increase the surface area for clicking points
on the map. it is not perfect but much better than what we currently
have.
the click event needs some attention now but at least we can get the
initial info for a point much earlier

--- a/src/index.html
+++ b/src/index.html
@@ -3024,7 +3024,7 @@
   <link href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
   <link rel="stylesheet" href="https://openup.org.za/wazimap-ng-ui/wazimap-ng.css">
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+
   <!--  Material design icons  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--  used the the autocomplete search box  -->
@@ -3144,5 +3144,7 @@ line, .grid {
   stroke: #999;
 }
 </style>
+	<script type='text/javascript' src="https://unpkg.com/leaflet-geometryutil"></script>
+	<script type='text/javascript' src="https://unpkg.com/leaflet-almostover"></script>
 </body>
 </html>
