--- a/src/index.html
+++ b/src/index.html
@@ -627,40 +627,19 @@
                   </svg></div>
               </div>
               <div class="location__facilities_title">
-                <div>This <span class="location__facilities_geo-type">location</span> has <span class="location__facilities_facilities-value"><strong>0000</strong></span><strong> facilities</strong> in <span class="location__facilities_categories-value"><strong>0000</strong></span><strong> categories</strong>.</div>
+                <div>This <span class="location__facilities_geo-type">area</span> has <span class="location__facilities_facilities-value"><strong>0000</strong></span><strong> locations</strong> in <span class="location__facilities_categories-value"><strong>0000</strong></span><strong> categories</strong>.</div>
               </div>
             </div>
             <div class="location__facilities_trigger hidden">
-              <div data-w-id="d2df92af-c619-a615-ada8-5aae86e9c6ad" style="display:flex" class="location__facilities_expand">
-                <div>Show facilities</div>
+              <div data-w-id="043d7c6f-c1d6-89bf-425b-062a1bf20e63" class="location__facilities_expand bg-primary">
+                <div>Show locations</div>
               </div>
-              <div data-w-id="d2df92af-c619-a615-ada8-5aae86e9c6b0" style="display:none" class="location__facilities_contract">
-                <div>Hide facilities</div>
+              <div data-w-id="043d7c6f-c1d6-89bf-425b-062a1bf20e66" class="location__facilities_contract bg-primary">
+                <div>Hide locations</div>
               </div>
             </div>
             <div style="height:0PX" class="location__facilities_content">
-              <div class="location__facilities_content-wrapper">
-                <div class="location__facilities_sources">
-                  <div class="label">
-                    <div>Sources:</div>
-                  </div>
-                  <div class="location__sources_loading">
-                    <div class="loading">
-                      <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
-                      <div class="loading__text">
-                        <div>Loading... </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="location__sources_no-data hidden">
-                    <div class="no-data">
-                      <div class="no-data__text">
-                        <div>No source data available</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <div class="location__facilities_content-wrapper"></div>
             </div>
           </div>
         </section>
