added data-id attributes

--- a/src/index.html
+++ b/src/index.html
@@ -2549,10 +2549,10 @@
                           </div>
                         </div>
                         <div class="hover-menu__content_list">
-                          <a href="#" class="hover-menu__content_list-item active w-inline-block">
+                          <a data-id="Percentage" href="#" class="hover-menu__content_list-item active w-inline-block">
                             <div>Percentage</div>
                           </a>
-                          <a href="#" class="hover-menu__content_list-item last w-inline-block">
+                          <a data-id="Value" href="#" class="hover-menu__content_list-item last w-inline-block">
                             <div>Value</div>
                           </a>
                         </div>
@@ -2565,13 +2565,13 @@
                           </div>
                         </div>
                         <div class="hover-menu__content_list--last">
-                          <a href="#" class="hover-menu__content_list-item w-inline-block">
+                          <a data-id="csv" href="#" class="hover-menu__content_list-item w-inline-block">
                             <div>CSV</div>
                           </a>
-                          <a href="#" class="hover-menu__content_list-item w-inline-block">
+                          <a data-id="excel" href="#" class="hover-menu__content_list-item w-inline-block">
                             <div>Excel</div>
                           </a>
-                          <a href="#" class="hover-menu__content_list-item w-inline-block">
+                          <a data-id="json" href="#" class="hover-menu__content_list-item w-inline-block">
                             <div>JSON</div>
                           </a>
                         </div>
