filtering on multiple columns

--- a/src/index.html
+++ b/src/index.html
@@ -460,6 +460,62 @@
                     </svg></div>
                 </a>
               </div>
+			  <!--this part is extra-->
+              <div class="map-options__filter-row">
+                <div class="mapping-options__filter">
+                  <div data-w-id="86654d00-b063-c2ad-61db-f5ff0f0a4622" class="mapping-options__filter_menu">
+                    <div class="dropdown-menu__trigger">
+                      <div class="dropdown-menu__selected-item">
+                        <div class="truncate">race</div>
+                      </div>
+                      <div class="dropdown-menu__icon">
+                        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path fill="currentColor" d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+                          </svg></div>
+                      </div>
+                    </div>
+                    <div class="dropdown-menu__content position-top scroll-element">
+                      <div class="dropdown__list_item selected">
+                        <div class="truncate">Select an attribute</div>
+                      </div>
+                      <div class="dropdown__list_item">
+                        <div class="truncate">Attribute</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="mapping-options__filter">
+                  <div data-w-id="86654d00-b063-c2ad-61db-f5ff0f0a4631" class="mapping-options__filter_menu">
+                    <div class="dropdown-menu__trigger is--disabled">
+                      <div class="dropdown-menu__selected-item">
+                        <div class="truncate">Indian or asian</div>
+                      </div>
+                      <div class="dropdown-menu__icon">
+                        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                            <path fill="currentColor" d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+                          </svg></div>
+                      </div>
+                    </div>
+                    <div class="dropdown-menu__content position-top scroll-element">
+                      <div class="dropdown__list_item selected">
+                        <div class="truncate">Select a value</div>
+                      </div>
+                      <div class="dropdown__list_item">
+                        <div class="truncate">Value</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a title="Remove filter" href="#" class="mapping-options__remove-filter is--hidden w-inline-block">
+                  <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+                    </svg></div>
+                </a>
+              </div>
+			  <!--this part is extra-->
               <a title="Add new filter" href="#" class="mapping-options__add-filter w-inline-block">
                 <div class="text-block-3">Add new filter</div>
                 <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
