removed allvalues from filter dropdowns

--- a/src/index.html
+++ b/src/index.html
@@ -411,7 +411,7 @@
                   <div data-w-id="86654d00-b063-c2ad-61db-f5ff0f0a4622" class="mapping-options__filter_menu">
                     <div class="dropdown-menu__trigger">
                       <div class="dropdown-menu__selected-item">
-                        <div class="truncate">All values</div>
+                        <div class="truncate">Select an attribute</div>
                       </div>
                       <div class="dropdown-menu__icon">
                         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
@@ -422,7 +422,7 @@
                     </div>
                     <div class="dropdown-menu__content position-top scroll-element">
                       <div class="dropdown__list_item selected">
-                        <div class="truncate">All values</div>
+                        <div class="truncate">Select an attribute</div>
                       </div>
                       <div class="dropdown__list_item">
                         <div class="truncate">Attribute</div>
